--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
@@ -4,6 +4,7 @@
   <package id="akavache.core" version="5.0.0" targetFramework="monoandroid71" />
   <package id="akavache.sqlite3" version="5.0.0" targetFramework="monoandroid71" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="monoandroid60" />
+  <package id="ExifLib.PCL" version="1.0.1" targetFramework="monoandroid70" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid60" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid71" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid71" />
@@ -11,6 +12,7 @@
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="monoandroid71" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid71" />
+  <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="monoandroid70" />
   <package id="Rx-Core" version="2.2.5" targetFramework="monoandroid71" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="monoandroid71" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="monoandroid71" />
@@ -92,4 +94,9 @@
   <package id="Xamarin.FFImageLoading.Svg.Forms" version="2.2.25" targetFramework="monoandroid71" />
   <package id="Xamarin.FFImageLoading.Transformations" version="2.2.25" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms" version="2.5.0.121934" targetFramework="monoandroid70" />
+  <package id="XLabs.Core" version="2.0.5782" targetFramework="monoandroid70" />
+  <package id="XLabs.Forms" version="2.0.5782" targetFramework="monoandroid70" />
+  <package id="XLabs.IoC" version="2.0.5782" targetFramework="monoandroid70" />
+  <package id="XLabs.Platform" version="2.0.5782" targetFramework="monoandroid70" />
+  <package id="XLabs.Serialization" version="2.0.5782" targetFramework="monoandroid70" />
 </packages>
