--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
@@ -4,9 +4,11 @@
   <package id="akavache.core" version="5.0.0" targetFramework="portable46-net451+win81" />
   <package id="akavache.sqlite3" version="5.0.0" targetFramework="portable46-net451+win81" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="portable46-net451+win81" />
+  <package id="ExifLib.PCL" version="1.0.1" targetFramework="portable46-net451+win81" />
   <package id="MvvmLight" version="5.3.0.0" targetFramework="portable46-net451+win81" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="portable46-net451+win81" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="portable46-net451+win81" />
+  <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="portable46-net451+win81" />
   <package id="Rx-Core" version="2.2.5" targetFramework="portable46-net451+win81" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="portable46-net451+win81" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="portable46-net451+win81" />
@@ -24,4 +26,9 @@
   <package id="Xamarin.FFImageLoading.Svg.Forms" version="2.2.25" targetFramework="portable46-net451+win81" />
   <package id="Xamarin.FFImageLoading.Transformations" version="2.2.25" targetFramework="portable46-net451+win81" />
   <package id="Xamarin.Forms" version="2.5.0.121934" targetFramework="portable46-net451+win81" />
+  <package id="XLabs.Core" version="2.0.5782" targetFramework="portable46-net451+win81" />
+  <package id="XLabs.Forms" version="2.0.5782" targetFramework="portable46-net451+win81" />
+  <package id="XLabs.IoC" version="2.0.5782" targetFramework="portable46-net451+win81" />
+  <package id="XLabs.Platform" version="2.0.5782" targetFramework="portable46-net451+win81" />
+  <package id="XLabs.Serialization" version="2.0.5782" targetFramework="portable46-net451+win81" />
 </packages>
