--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/Properties/AndroidManifest.xml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.MSO.AppStimmer" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.MSO.AppStimmer" android:versionCode="1" android:versionName="1.0" android:installLocation="internalOnly">
 	<uses-sdk android:minSdkVersion="24" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -12,7 +12,7 @@
 	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<application android:label="@string/app_name" android:icon="@drawable/splashscreen_small">
+	<application android:label="StimmApp" android:icon="@drawable/splashscreen_small_transparent">
 		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyA_MUP847i71AlbItICsglJGi-QNF04Ckw" />
 		<provider android:name="android.support.v4.content.FileProvider" android:authorities="com.companyname.MSO.AppStimmer.fileprovider" android:exported="false" android:grantUriPermissions="true">
 			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
